--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: anin
 ---
+<!-- ^^^^ NO TOUCHY ^^^^ -->
 <h1>It works!</h1>
 <p><i>site.url</i> = {{ site.url }}</p>
 <p><i>site.baseurl</i> = {{ site.baseurl }}</p>
